# tee-playground

./: .gitignore  Cargo.toml  Makefile
contracts/: foundry.toml
contracts/script/: Deploy.s.sol
contracts/src/: BlockBuilderPolicy.sol  FlashtestationRegistry.sol  MockAttestation.sol
contracts/src/interfaces/: IAttestation.sol  IBlockBuilderPolicy.sol  IFlashtestationRegistry.sol
crates/client/: Cargo.toml
crates/client/src/: main.rs  verifier.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs  quote.rs  types.rs
crates/indexer/: Cargo.toml
crates/indexer/src/: main.rs
crates/mock-tee/: Cargo.toml
crates/mock-tee/src/: main.rs  tls.rs
docs/: README.md
