[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/mock-tee",
    "crates/indexer",
    "crates/client",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }

# Ethereum
alloy = { version = "1.0", features = ["full", "node-bindings"] }

# Web framework
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# TLS
rustls = "0.23"
tokio-rustls = "0.26"
rcgen = "0.13"
x509-cert = "0.2"
webpki-roots = "0.26"

# Crypto
k256 = { version = "0.13", features = ["ecdsa"] }
p256 = { version = "0.13", features = ["ecdsa"] }
sha2 = "0.10"
rand = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Internal crates
common = { path = "crates/common" }
