[package]
name = "client"
version.workspace = true
edition = "2021"

[dependencies]
common.workspace = true
tokio.workspace = true
reqwest.workspace = true
rustls = { workspace = true, features = ["aws_lc_rs"] }
tokio-rustls.workspace = true
webpki-roots.workspace = true
k256.workspace = true
p256.workspace = true
sha2.workspace = true
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
