[package]
name = "common"
version.workspace = true
edition = "2021"

[dependencies]
alloy.workspace = true
k256.workspace = true
sha2.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with = { version = "3.16", features = ["hex"] }
hex.workspace = true
anyhow.workspace = true
thiserror.workspace = true
