[package]
name = "mock-tee"
version.workspace = true
edition = "2021"

[dependencies]
common.workspace = true
alloy.workspace = true
tokio.workspace = true
axum.workspace = true
tower-http.workspace = true
tower = "0.5"
rustls = { workspace = true, features = ["aws_lc_rs"] }
tokio-rustls.workspace = true
rcgen.workspace = true
k256.workspace = true
p256.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
